@@ -6,7 +6,7 @@
 # Provided by the Cygwin Ports project <http://cygwinports.dotsrc.org/>
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: cygport.in,v 1.38 2006-12-13 07:10:15 yselkowitz Exp $
+# $Id: cygport.in,v 1.39 2006-12-18 09:12:49 yselkowitz Exp $
 #
 ################################################################################
 
@@ -336,10 +336,10 @@ fetch() {
 
 	if check_prog wget
 	then
-		wget -O ${urifile} ${uri}
+		wget --no-check-certificate -O ${urifile} ${uri}
 	elif check_prog curl
 	then
-		curl --url ${uri} -o ${urifile}
+		curl -k --url ${uri} -o ${urifile}
 	else
 		error "Either wget or curl are required to fetch sources.";
 	fi
@@ -394,10 +394,11 @@ src_fetch() {
 	else
 		for uri in ${SRC_URI}
 		do
-			case ${uri%/*} in
-				mirror:*)      mirror_fetch ${uri} ;;
-				http:*|ftp:*)  fetch ${uri} || error "Download ${uri##*/} failed" ;;
-				${uri}|.)      error "Invalid download URI ${uri}" ;;
+			case ${uri%%://*} in
+				mirror)			mirror_fetch ${uri} ;;
+				http|https|ftp)	fetch ${uri} || error "Download ${uri##*/} failed" ;;
+				${uri})			;;
+				*)				error "Invalid download URI ${uri}" ;;
 			esac
 		done
 	fi
